chore: add GitHub Actions workflows for automated publishing
- Add CI workflow for continuous integration
- Add Release workflow for automated npm publishing on tags
- Add Publish workflow for manual/release-based publishing
- Add release scripts for easy version bumping (patch/minor/major)
- Add comprehensive setup and quick start documentation

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "scripts": {
     "build": "tsup src/index.jsx --format cjs,esm --external react --external react-dom",
     "dev": "tsup src/index.jsx --format cjs,esm --external react --external react-dom --watch",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "pnpm build",
+    "release:patch": "npm version patch && git push --follow-tags",
+    "release:minor": "npm version minor && git push --follow-tags",
+    "release:major": "npm version major && git push --follow-tags",
+    "pack:check": "npm pack --dry-run"
   },
   "repository": {
     "type": "git",
